# HyperONNX

./: .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/torch-dynamo-onnx-export/: SKILL.md
.claude/skills/torch-legacy-onnx-export/: SKILL.md
.github/workflows/: lint.yml  unittest.yml
hyperonnx/: __init__.py  auto.py  function_rewriter.py  hyper_export.py  patch.py  torch_export.py  typing.py  utils.py
hyperonnx/exporter/: __init__.py  dynamo.py  torchscript.py  utils.py
hyperonnx/transformers/: __init__.py  attention.py  cache.py  patch.py
tests/: test_auto_trace_method.py  test_compose_nodes_to_functions.py  test_export_functions.py  test_export_hyper_onnx.py  test_fuse_constants_to_function.py
tests/expoter/: test_detach_module_outputs.py  test_dynamo_build_onnxscript.py  test_dynamo_make_custom_op.py  test_dynamo_replace_custom_op.py  test_non_pod_export.py  test_plain_output_tensors.py
tests/transformers/: test_attention.py  test_static_cache.py
