# Copyright (C) 2023-2026 The HYPERONNX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hyperonnx"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Wenyi Tang", email = "wenyitang@outlook.com" }]
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]
dynamic = ["version", "description"]
dependencies = ["onnxifier>=2.0.3", "onnxscript<0.6.0", "onnx>=1.18.0"]

[project.urls]
Home = "https://github.com/LoSealL/hyperonnx"
Docs = "https://loseall.github.io/hyperonnx"

[project.optional-dependencies]
cpu = ["torch<2.11", "torchvision", "triton-windows; sys_platform == 'win32'"]
cuda = ["torch<2.11", "torchvision", "triton-windows; sys_platform == 'win32'"]
xpu = ["torch<2.11", "torchvision", "pytorch-triton-xpu"]

[dependency-groups]
dev = [
    "mypy",
    "onnxruntime",
    "pre-commit",
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov",
    "transformers>=4.48.0",
]

[tool.setuptools]
# Compatible with setuptools, when change build-system to setuptools.
packages = ["hyperonnx"]

[tool.pyright]
include = ["hyperonnx"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-s"]

[tool.flake8]
ignore = ["E203", "E231", "E241"]
per-file-ignores = ["__init__.py:F401"]
exclude = []
max-line-length = 88
max-complexity = 20
count = true

[tool.isort]
profile = "black"
skip_glob = []

[tool.pylint."MAIN"]
ignore-paths = []

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "logging-fstring-interpolation",
    "import-outside-toplevel",
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "fixme",
    "R",
    "I",
]

[tool.mypy]
disable_error_code = ["assignment", "import-untyped", "return-value", "return"]
exclude = ['^tests.*\.py$']

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda130", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda130", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = { index = "pytorch-xpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda131"
url = "https://download.pytorch.org/whl/cu131"
explicit = true

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "xpu" }, { extra = "cuda" }]]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["E203", "E231", "E241"]
